--- a/views/bookinstance_form.pug
+++ b/views/bookinstance_form.pug
@@ -5,28 +5,28 @@ block content
 
   form(method='POST' action='')
     div.form-group
-      label(for='book') Book:
+      label(for='book') 책이름:
       select#book.form-control(type='select' placeholder='Select book' name='book' required='true')
         - book_list.sort(function(a, b) {let textA = a.title.toUpperCase(); let textB = b.title.toUpperCase(); return (textA < textB) ? -1 : (textA > textB) ? 1 : 0;});
         for book in book_list
           option(value=book._id, selected=(selected_book==book._id.toString() ? 'selected' : false) ) #{book.title}
 
     div.form-group
-      label(for='imprint') Imprint:
-      input#imprint.form-control(type='text' placeholder='Publisher and date information' name='imprint' required='true' value=(undefined===bookinstance ? '' : bookinstance.imprint))
+      label(for='imprint') 날인:
+      input#imprint.form-control(type='text' placeholder='출판자 및 출판일 정보' name='imprint' required='true' value=(undefined===bookinstance ? '' : bookinstance.imprint))
     div.form-group
-      label(for='due_back') Date when book available:
+      label(for='due_back') 사용 가능 날짜:
       input#due_back.form-control(type='date' name='due_back' value=(undefined===bookinstance ? '' : bookinstance.due_back))
 
     div.form-group
       label(for='status') Status:
       select#status.form-control(type='select' placeholder='Select status' name='status' required='true')
-        option(value='Maintenance') Maintenance
-        option(value='Available') Available
-        option(value='Loaned') Loaned
-        option(value='Reserved') Reserved
+        option(value='Maintenance') 관리중
+        option(value='Available') 사용가능
+        option(value='Loaned') 사용중
+        option(value='Reserved') 예약됨
 
-    button.btn.btn-primary(type='submit') Submit
+    button.btn.btn-primary(type='submit') 생성
 
   if errors
     ul
