--- a/views/genre_detail.pug
+++ b/views/genre_detail.pug
@@ -2,12 +2,12 @@ extends layout
 
 block content 
 
-  h1 Genre: #{genre.name}
+  h1 장르: #{genre.name}
 
   div(style='margin-left:20px;margin-top:20px')
 
 
-    h4 Books 
+    h4 책
 
     dl 
       each book in genre_books 
@@ -16,4 +16,4 @@ block content
         dd #{book.summary} 
 
       else 
-        p This genre has no books
+        p 현재 장르의 책이 없습니다.
