--- a/views/genre_form.pug
+++ b/views/genre_form.pug
@@ -5,9 +5,9 @@ block content
 
   form(method="POST" action='')
     .form-group 
-      label(for='name')  Genre: 
-      input#name.form-control(type='text', placeholder='Fantasy, Poetry etc.' name='name' value=(undefined===genre ? '' : genre.name))
-      button.btn.btn-primary(type='submit') Submit 
+      label(for='name')  장르: 
+      input#name.form-control(type='text', placeholder='판타지, 시, 등등' name='name' value=(undefined===genre ? '' : genre.name))
+      button.btn.btn-primary(type='submit') 생성
 
   if errors 
     ul 
