--- a/views/layout.pug
+++ b/views/layout.pug
@@ -25,24 +25,24 @@ html(lang='en')
               li
                 a(href='/catalog') Home
               li
-                a(href='/catalog/books') All books
+                a(href='/catalog/books') 책
               li
-                a(href='/catalog/authors') All authors
+                a(href='/catalog/authors') 작가
               li
-                a(href='/catalog/genres') All genres
+                a(href='/catalog/genres') 장르
               li
-                a(href='/catalog/bookinstances') All book-instances
+                a(href='/catalog/bookinstances') 책객체
               li
                 hr
               if user && user.id 
                 li
-                  a(href='/catalog/author/create') Create new author
+                  a(href='/catalog/author/create') 작가 추가
                 li
-                  a(href='/catalog/genre/create') Create new genre
+                  a(href='/catalog/genre/create') 장르 추가
                 li
-                  a(href='/catalog/book/create') Create new book
+                  a(href='/catalog/book/create') 책 추가
                 li
-                  a(href='/catalog/bookinstance/create') Create new book instance
+                  a(href='/catalog/bookinstance/create') 책 인스턴스 추가
         div(class='col-sm-10')
           block content         
 
