--- a/views/bookinstance_detail.pug
+++ b/views/bookinstance_detail.pug
@@ -22,6 +22,6 @@ block content
   if user && user.id 
     hr
     p
-      a(href=bookinstance.url+'/delete') 책 객체 삭제
+      a(href=bookinstance.url+'/delete') 삭제하기
     p
-      a(href=bookinstance.url+'/update') 책 객제 업데이트
+      a(href=bookinstance.url+'/update') 업데이트하기
