--- a/views/layout.pug
+++ b/views/layout.pug
@@ -36,13 +36,13 @@ html(lang='en')
                 hr
               if user && user.id 
                 li
-                  a(href='/catalog/author/create') 작가 추가
+                  a(href='/catalog/author/create') 작가생성
                 li
-                  a(href='/catalog/genre/create') 장르 추가
+                  a(href='/catalog/genre/create') 장르생성
                 li
-                  a(href='/catalog/book/create') 책 추가
+                  a(href='/catalog/book/create') 책생성
                 li
-                  a(href='/catalog/bookinstance/create') 책 인스턴스 추가
+                  a(href='/catalog/bookinstance/create') 책객체생성
         div(class='col-sm-10')
           block content         
 
