--- a/views/bookinstance_form.pug
+++ b/views/bookinstance_form.pug
@@ -26,7 +26,7 @@ block content
         option(value='Loaned') 사용중
         option(value='Reserved') 예약됨
 
-    button.btn.btn-primary(type='submit') 생성
+    button.btn.btn-primary(type='submit') 제출
 
   if errors
     ul
