--- a/views/bookinstance_list.pug
+++ b/views/bookinstance_list.pug
@@ -1,18 +1,16 @@
 extends layout 
 block content 
-  h1=titel 
-
+  h1=title 
 
   ul 
     each val in bookinstance_list
       li 
         a(href=val.url) #{val.book.title} : #{val.imprint} -
         if val.status=='Available'
-          span.text-success #{val.status}
+          span.text-success 사용가능
         else if val.status=='Maintenance'
-          span.text-danger #{val.status}
+          span.text-danger 작업중
         else 
-          span.text_warning #{val.status}
+          span.text_warning 예약중
         if val.status!='Available'
-          //span (Due: #{val.due_back})
-          span (Due: #{val.due_back_formatted})
+          span (반납일: #{val.due_back_formatted})
